# cg_lab

./: .gitignore
asteroids/: colors.h  game.h  main_game.cc  math.tcc  sdl2_renderer.cc
asteroids/assets/images/: spaceships.eps
aufgabe_1/: .gitignore
aufgabe_1/asteroids/: CMakeLists.txt  game.cc  geometry.tcc  math_test.cc  sound.h
aufgabe_1/geometry/: geometry_test.cc
aufgabe_1/math/: math.tcc  math_test.cc
aufgabe_2/raytracer/: CMakeLists.txt  math.h  raytracer.cc  raytracer_test.cc
aufgabe_2/raytracer/configuration/: configuration.h
aufgabe_2/raytracer/logic/: HitContext.h
aufgabe_2/raytracer/math/: math.h
aufgabe_2/raytracer/objects/: Material.h  Scene.h  Sphere3d.h
aufgabe_2/raytracer/raytracer/configuration/: configuration.cpp  configuration.h
aufgabe_2/raytracer/raytracer/objects/: Camera.h  Material.h  Object3d.h  Screen.h  Sphere3d.h  Triangle3d.h
aufgabe_2/raytracer/raytracer/output_generator/: Output_generator.h
aufgabe_2/raytracer/raytracer/renderer/: Renderer.h
aufgabe_2/raytracer/raytracer/screen/: Screen.cpp  Screen.h
aufgabe_2/raytracer/raytracer/tracer/: Tracer.cpp  Tracer.h
aufgabe_2/raytracer/renderer/: Camera.h  Renderer.h  Screen.h
aufgabe_2/raytracer/test/: math_test.cc  raytracer_test.cc
aufgabe_2/raytracer/tracer/: Tracer.h
aufgabe_2/raytracer_eddie/: CMakeLists.txt  geometry.h  geometry.tcc  geometry_test.cc  math.cc  math.h  math.tcc  math_test.cc  raytracer.cc
aufgabe_2/raytracer_ver_2/: CMakeLists.txt  raytracer.cc
aufgabe_2/raytracer_ver_3/: CMakeLists.txt  raytracer.cc
aufgabe_2/raytracer_ver_3/geometry/: geometry.h
aufgabe_2/raytracer_ver_3/math/: math.h  math.tcc
aufgabe_2/raytracer_ver_3/objects/: Material.h  Sphere3d.h
aufgabe_2/raytracer_ver_3/output/: Camera.h  Renderer.cpp  Renderer.h
aufgabe_2/raytracer_ver_3/test/: renderer_test.cc
aufgabe_3/: Asteroid_2b.mtl  asteroid.mtl  spaceship.blend  spaceship.blend1  spaceship.mtl
aufgabe_3/asteroids_opengl/: CMakeLists.txt  geometry_test.cc  main_game.cc  math_test.cc  matrix_test.cc  opengl_renderer.cc  sound.h
aufgabe_3/asteroids_opengl_3d/: CMakeLists.txt  game.cc  game.h  main_game.cc  opengl_renderer.cc  physics.tcc  sdl2_renderer.cc  wavefront.cc
aufgabe_3/matrix/: CMakeLists.txt  math.h  math.tcc  matrix.h  matrix.tcc
aufgabe_3/viewer/: CMakeLists.txt  viewer.cc  wavefront_test.cc
geometry/: CMakeLists.txt  geometry.h
